# eyemeeye

./: .clinerules  .coverage  .env  .env.example  .gitignore  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  alembic.ini  coverage.xml  docker-compose.yml  main.py  notes.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_email_otp_fields.py  003_add_password_reset_fields.py
docs/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  usage.rst
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree
instance/: app.db
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
nginx/: Dockerfile  nginx.conf
src/: __init__.py
src/app/: __init__.py  config.py  extensions.py  models.py
src/app/routes/: __init__.py  auth.py  manager.py  responses.py  user.py
src/app/services/: auditing.py  auth.py  security.py  user_management.py  validation.py
src/app/utils/: email.py
src/frontend/: index.html  package-lock.json  package.json  tsconfig.json
src/frontend/src/: App.css  App.tsx  types.ts
tests/: conftest.py  test_auth.py  test_config.py  test_email.py  test_manager.py  test_models.py  test_password_reset.py  test_password_verification.py  test_responses.py  test_security.py  test_user.py  test_validation.py
